# BackEnd-Newslayers

./: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  paginations.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_comentario_noticia_idnoticia_and_more.py  0002_seguir.py  0003_midia.py  0003_topico_alter_seguir_options_remove_usuario_banner_and_more.py  0004_alter_midia_user_user_iduser.py  0005_alter_comentario_datacomentario_and_more.py  0006_alter_comentario_datacomentario.py  0007_alter_comentario_datacomentario_and_more.py
core/models/: Comentario.py  Curtida.py  Midia.py  Midia_user.py  Noticia.py  Topico.py  Usuario.py  __init__.py
newslayers/: asgi.py  settings.py  urls.py  wsgi.py
