[tool.poetry]
name = "backend-newslayers"
version = "0.1.0"
description = ""
authors = ["Gustavo Trentini <gustavotrentini22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.1"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
python-decouple = "^3.6"
psycopg2 = "^2.9.4"
django-storages = "^1.13.1"
boto3 = "^1.24.91"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
